--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="yswaotdjd">Your song will appear on the DJ\'s device</string>
     <string name="delete">Delete</string>
     <string name="song_name">Song Name</string>
+    <string name="logoaplikacie">LogoAplikacie</string>
+    <string name="songs">SONGS:</string>
 </resources>
