--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="delete">Delete</string>
     <string name="song_name">Song Name</string>
     <string name="songs">SONGS:</string>
+    <string name="logomusichelper">LogoMUSICHELPER</string>
 </resources>
